gitops/apps/volunteer-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volunteer-service
  namespace: volunteer-service
  labels:
    app: volunteer-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volunteer-service
  template:
    metadata:
      labels:
        app: volunteer-service
        tier: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: volunteer-service
          image: 987168675043.dkr.ecr.us-east-1.amazonaws.com/solidarytech/volunteer-service:7d816e3fb98a6be59aaec8bb29c1d1c5e4b799f7
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          livenessProbe:
            tcpSocket:
              port: 8003
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
